[gd_scene load_steps=3 format=2]

[ext_resource path="res://Actors/PlayerBookSuccer.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 48.0

[node name="PlayerBookSuccer" type="Area2D"]
script = ExtResource( 1 )
throw_speed = 75.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 12.7136, -7.94597 )
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_PlayerBookSuccer_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PlayerBookSuccer_body_exited"]
